<resources>
    <string name="app_name">Quiz</string>
    <string name="quiz">QUIZ</string>
    <string name="entrar">ENTRAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="pergunta">Pergunta</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="todo">TODO</string>
    <string name="azul">Azul</string>
    <string name="enviar">ENVIAR</string>
    <string name="amarelo">Amarelo</string>
    <string name="verde">Verde</string>
    <string name="errou">ERROU</string>
    <string name="acertou">ACERTOU</string>
</resources>