<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck"
            tools:src="@android:drawable/btn_star_big_on"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/pergunta"
            app:layout_constraintBottom_toTopOf="@+id/question_radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Qual a cor do mascote do android?"/>

        <RadioGroup
            android:id="@+id/question_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/aRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/azul"
                tools:text="Azul"/>

            <RadioButton
                android:id="@+id/bRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verde"
                tools:text="Verde" />

            <RadioButton
                android:id="@+id/cRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amarelo"
                tools:text="Amarelo" />
        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enviar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_radioGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>